add first question with radio button answers, assigned each a value, use same method for each question after

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src='js/scripts.js'></script></script>
   </head>
   <body>
+    <h1>quiz: what x-files character are you?!</h1>
+    <p>take our three question quiz and find out if you're fox mulder or dana scully!</p>
 
   </body>
 </html>
